Morning code after two missing days. Look for featurelist for more.